--- a/client/templates/client/users_management.html
+++ b/client/templates/client/users_management.html
@@ -21,6 +21,7 @@
     </div>
 
     <!-- Users Table -->
+    <div class="table-responsive">
     <table id="usersTable" class="rounded-table">
         <thead>
             <tr>
@@ -54,6 +55,8 @@
         </tbody>
         
     </table>
+</div>
+
 </div>
 
 <script>
