--- a/client/static/client/css/reports.css
+++ b/client/static/client/css/reports.css
@@ -132,7 +132,7 @@ canvas {
 @media screen and (max-width: 768px) {
     .content {
         padding: 15px;
-        margin-left: 0; 
+        margin-left: 30px; 
     }
 
     .charts, .charts2 {
@@ -168,4 +168,9 @@ canvas {
         font-size: 16px;
         padding-top: 10px;
     }
+
+    .more-stats-btn {
+            display: none;
+        }
+    
 }
