--- a/users/templates/users/Profile/update_profile.html
+++ b/users/templates/users/Profile/update_profile.html
@@ -1,4 +1,3 @@
-<body class="update-page">
 {% extends "users/base.html" %}
 {% load static %}
 
@@ -6,6 +5,8 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'users/css/profile_style.css' %}">
+
+<div class="update-page">
 
 <div class="profile-container">
     <!-- Profile Header -->
@@ -197,57 +198,10 @@
     </form>
 </div>
 
+</div>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // Password Toggle Logic
-        const toggles = document.querySelectorAll(".password-toggle");
-        
-        toggles.forEach(toggle => {
-            toggle.addEventListener("click", function() {
-                const inputField = document.getElementById(this.getAttribute("data-target"));
-    
-                if (inputField.type === "password") {
-                    inputField.type = "text";
-                    this.classList.remove("fa-eye");
-                    this.classList.add("fa-eye-slash"); // Switch to hide icon
-                } else {
-                    inputField.type = "password";
-                    this.classList.remove("fa-eye-slash");
-                    this.classList.add("fa-eye"); // Switch back to show icon
-                }
-            });
-        });
-
-    const form = document.querySelector("form");
-    const password = document.getElementById("new_password");
-    const confirmPassword = document.getElementById("confirm_password");
-
-    form.addEventListener("submit", function(event) {
-        if (password.value !== confirmPassword.value) {
-            confirmPassword.setCustomValidity("Passwords do not match!");  // ALL ERRORS
-            event.preventDefault(); // Stops form submission
-        } else {
-            confirmPassword.setCustomValidity(""); // Clears error if valid
-        }
-    });
-    
-    const ageField = document.getElementById("id_age");
-
-    ageField.addEventListener("input", function () {
-        if (this.validity.rangeUnderflow || this.validity.rangeOverflow) {
-            this.setCustomValidity("Age must be between 18 and 100.");
-        } else {
-            this.setCustomValidity(""); // Reset the default validation
-        }
-    });
-
-    });
-</script>
-
-    
-    
 {% endblock %}
 
-</body>
-
+{% block extra_js %}
+<script src="{% static 'users/js/update_profile.js' %}"></script>
+{% endblock %}
