--- a/client/templates/client/add_module.html
+++ b/client/templates/client/add_module.html
@@ -18,14 +18,24 @@
         <form method="post" class="card p-4 shadow-sm">
             {% csrf_token %}
 
+            {% if messages %}
+            <div>
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
+            
+
+
             <div class="mb-3">
                 <label class="form-label">Module Title</label>
-                <input type="text" name="title" class="form-control" required>
+                <input type="text" name="title" class="form-control">
             </div>
 
             <div class="mb-3">
                 <label class="form-label">Description</label>
-                <textarea name="description" class="form-control" rows="4" required></textarea>
+                <textarea name="description" class="form-control" rows="4"></textarea>
             </div>
 
             <!-- Video Resources -->
